<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="manningk.inventoryproject.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/lblItemDetails"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/lblItemDetailsStr" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblTypeStr"
        android:id="@+id/lblType"
        android:layout_below="@+id/lblItemDetails"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="left|center_vertical"
        android:layout_alignBottom="@+id/txtType" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtType"
        android:layout_below="@+id/lblItemDetails"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:focusable="false"
        android:layout_alignLeft="@+id/txtCost"
        android:layout_alignStart="@+id/txtCost" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblCostStr"
        android:id="@+id/lblCost"
        android:gravity="left|center_vertical"
        android:layout_below="@+id/lblType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/txtCost" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtCost"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:focusable="false"
        android:layout_below="@+id/txtType"
        android:layout_toRightOf="@+id/lblQuantity"
        android:layout_toEndOf="@+id/lblQuantity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblQuantityStr"
        android:id="@+id/lblQuantity"
        android:gravity="left|center_vertical"
        android:layout_below="@+id/lblCost"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/txtQuantity" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtQuantity"
        android:focusable="false"
        android:layout_below="@+id/txtCost"
        android:layout_alignRight="@+id/txtCost"
        android:layout_alignEnd="@+id/txtCost"
        android:layout_toRightOf="@+id/lblQuantity"
        android:layout_toEndOf="@+id/lblQuantity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblActionStr"
        android:id="@+id/lblAction"
        android:gravity="left|center_vertical"
        android:layout_below="@+id/lblQuantity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spnAction" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnAction"
        android:layout_below="@+id/txtQuantity"
        android:layout_alignLeft="@+id/txtQuantity"
        android:layout_alignStart="@+id/txtQuantity"
        android:spinnerMode="dialog"
        android:entries="@array/spnItemActionsArr"
        android:layout_alignRight="@+id/txtQuantity"
        android:layout_alignEnd="@+id/txtQuantity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPerformActionStr"
        android:id="@+id/btnPerformAction"
        android:layout_below="@+id/spnAction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:clickable="true"
        android:onClick="btnPerformActionOnClick" />

</RelativeLayout>
